--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.7",
+    "@react-oauth/google": "^0.12.2",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-graticule": "^0.0.1",
     "lodash": "^4.17.21",
